RESOLVED FIXED173755
[iOS] Potential crash under WebCore::notifyLowPowerModeChanged(WebCore::LowPowerModeNotifier*, bool)
https://bugs.webkit.org/show_bug.cgi?id=173755
Summary [iOS] Potential crash under WebCore::notifyLowPowerModeChanged(WebCore::LowPo...
Chris Dumez
Reported 2017-06-22 22:06:00 PDT
Potential crash under WebCore::notifyLowPowerModeChanged(WebCore::LowPowerModeNotifier*, bool): Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed ↩: 0 WebCore 0x000000018fc3c364 WebCore::notifyLowPowerModeChanged(WebCore::LowPowerModeNotifier*, bool) + 160 (Function.h:50) 1 WebCore 0x000000018fc3c358 WebCore::notifyLowPowerModeChanged(WebCore::LowPowerModeNotifier*, bool) + 148 (LowPowerModeNotifierIOS.mm:92) 2 JavaScriptCore 0x000000018dc70814 WTF::dispatchFunctionsFromMainThread() + 344 (Function.h:50) 3 Foundation 0x000000018763098c __NSThreadPerformPerform + 340 (NSThread.m:1254) 4 CoreFoundation 0x0000000186be547c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 (CFRunLoop.c:1960) 5 CoreFoundation 0x0000000186be4cb0 __CFRunLoopDoSources0 + 276 (CFRunLoop.c:2006) 6 CoreFoundation 0x0000000186be2858 __CFRunLoopRun + 832 (CFRunLoop.c:2842) 7 CoreFoundation 0x0000000186b00c90 CFRunLoopRunSpecific + 436 (CFRunLoop.c:3148) 8 Foundation 0x000000018752f5c0 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 304 (NSRunLoop.m:367) 9 Foundation 0x00000001875826d4 -[NSRunLoop(NSRunLoop) run] + 88 (NSRunLoop.m:389) 10 libxpc.dylib 0x00000001868af2b8 _xpc_objc_main + 516 (main.m:198) 11 libxpc.dylib 0x00000001868b12c4 xpc_main + 180 (init.c:1461) 12 com.apple.WebKit.WebContent 0x00000001011e359c main + 380 (XPCServiceMain.mm:148) 13 libdyld.dylib 0x00000001866262d0 start + 4
Attachments
WIP Patch (4.95 KB, patch)
2017-06-22 22:29 PDT, Chris Dumez
no flags
WIP Patch (4.93 KB, patch)
2017-06-23 08:58 PDT, Chris Dumez
no flags
Patch (5.79 KB, patch)
2017-06-23 09:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-06-22 22:06:18 PDT
Chris Dumez
Comment 2 2017-06-22 22:29:50 PDT
Created attachment 313689 [details] WIP Patch
Build Bot
Comment 3 2017-06-22 22:31:35 PDT
Attachment 313689 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/LowPowerModeNotifierIOS.mm:76: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4 2017-06-23 08:58:45 PDT
Created attachment 313721 [details] WIP Patch
Build Bot
Comment 5 2017-06-23 09:01:03 PDT
Attachment 313721 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/LowPowerModeNotifierIOS.mm:76: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 6 2017-06-23 09:40:02 PDT
Build Bot
Comment 7 2017-06-23 09:41:45 PDT
Attachment 313724 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/LowPowerModeNotifierIOS.mm:76: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 8 2017-06-23 10:03:39 PDT
Comment on attachment 313724 [details] Patch r=me
WebKit Commit Bot
Comment 9 2017-06-23 10:33:17 PDT
Comment on attachment 313724 [details] Patch Clearing flags on attachment: 313724 Committed r218751: <http://trac.webkit.org/changeset/218751>
WebKit Commit Bot
Comment 10 2017-06-23 10:33:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.